--- a/basic-usage/src/main/resources/application.properties
+++ b/basic-usage/src/main/resources/application.properties
@@ -1,13 +1,9 @@
 server.port=8021
-# ????GZIP??
 feign.compression.request.enabled=true
-# ????GZIP??
 feign.compression.response.enabled=true
-# ???????MIME TYPE
 feign.compression.request.mime-types=text/xml, application/xml, application/json
-# ???????????
 feign.compression.request.min-request-size=2048
-# ? httpclient ?? feign ??? client
+# 底层替换成 httpclient
 feign.httpclient.enabled=false
-# ? okhttp ?? feign ??? client
+# 底层替换成 okhttp
 feign.okhttp.enabled=true
